force-app/main/default/objects/Webhook_Event__c/Webhook_Event__c.object-meta.xml
<CustomObject>
    <label>Webhook Event</label>
    <pluralLabel>Webhook Events</pluralLabel>
    <nameField>
        <displayFormat>WH-{0000000}</displayFormat>
        <label>Webhook Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Registro de cada webhook recibido: resultado, motivo y payload.</description>
</CustomObject>