force-app/main/default/objects/Webhook_Event__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <label>Booking</label>
    <type>Lookup</type>
    <referenceTo>Booking__c</referenceTo>
    <relationshipName>Webhook_Events</relationshipName>
    <relationshipLabel>Webhook Events</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>