force-app/main/default/objects/Webhook_Event__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <type>Text</type>
    <length>80</length>
</CustomField>