force-app/main/default/objects/Webhook_Event__c/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <label>Platform</label>
    <type>Text</type>
    <length>40</length>
</CustomField>