force-app/main/default/objects/Webhook_Event__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <label>Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Applied</fullName><default>false</default><label>Applied</label></value>
            <value><fullName>Warning</fullName><default>false</default><label>Warning</label></value>
            <value><fullName>Ignored</fullName><default>false</default><label>Ignored</label></value>
            <value><fullName>Rejected</fullName><default>false</default><label>Rejected</label></value>
            <value><fullName>Error</fullName><default>false</default><label>Error</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>